--- a/app/assets/stylesheets/07_friends.scss
+++ b/app/assets/stylesheets/07_friends.scss
@@ -137,6 +137,7 @@
 
 .unfriend-button-text {
   position: relative;
+  z-index: 3;
   bottom: 4px;
   left: 4px;
 }
